// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate e2e tests,
// which are released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/e2e/blob/main/LICENSE

syntax = "proto3";

option java_package = "dev.restate.e2e.services.eventhandler";
option java_outer_classname = "EventHandlerProto";

import "google/protobuf/empty.proto";
import "dev/restate/ext.proto";
import "dev/restate/events.proto";

package eventhandler;

service EventHandler {
  option (dev.restate.ext.service_type) = KEYED;

  rpc Handle (dev.restate.Event) returns (google.protobuf.Empty);
}
